# OpenGLProjectTemplate

./: .gitignore  CMakeLists.txt  CMakePresets.json  FindGfxLibs.cmake  LICENSE  README.md  vcpkg.json
dep/: glad.c
dep/include/glad/: glad.h
resources/: default.frag  default.vert
resources/models/otter/: otter.dae
resources/shaders/: Cube.h  default.frag  default.vert  light.frag  light.vert  model.frag  model.vert  phong.frag  phong.vert
src/: Application.cpp  Application.h  WindowManager.cpp  WindowManager.h  main.cpp
src/helpers/: Camera.cpp  Camera.h  EBO.cpp  EBO.h  Shader.cpp  Shader.h  ShaderProgram.cpp  ShaderProgram.h  Texture.cpp  Texture.h  VAO.cpp  VAO.h  VBO.cpp  VBO.h
src/sceneObjs/: Cube.cpp  Cube.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Otter.cpp  Otter.h  Pyramid.cpp  Pyramid.h  SceneObject.cpp  SceneObject.h  Square.cpp  Square.h
